# ur_rikuken

85_moveit/: .setup_assistant  CMakeLists.txt  package.xml
85_moveit/config/: ur3e_gripper.srdf
85_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  ur3e_gripper_moveit_sensor_manager.launch.xml
Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur3_realsense_85_bring_up copy.launch  ur3_robotiq85_bringup.launch
arm_and_gripper/arm_and_gripper/launch/: spawn_85_gripper.launch
arm_and_gripper/arm_and_gripper/urdf/: ur3e.urdf.xacro
arm_and_gripper/arm_and_gripper/urdf/phoxi_camera/: phoxi_camera.gazebo.xacro  phoxi_camera.urdf.gazebo.xacro  phoxi_camera.urdf.macro.xacro  phoxi_camera.urdf.xacro
arm_and_gripper/arm_and_gripper/urdf/robotiq_85_gripper/: robotiq_85_gripper.urdf.xacro
arm_and_gripper/arm_and_gripper/urdf/ur3_85/: ur3_85.urdf.xacro  ur3e_joint_limited_robot.urdf.xacro
moveit/: CMakeLists.txt  package.xml
moveit/include/moveit/: arm_move.hpp
moveit/launch/: haji.launch
moveit/src/: arm_move.cpp  arm_move_85.cpp  arm_move_main.cpp  arm_move_main_85.cpp  pick_and_placer.cpp
realsense2_description/rviz/: 85.rviz
robotiq_2finger_grippers/robotiq_2f_gripper_control/launch/: robotiq_action_server.launch
